--- a/app/src/main/res/layout/activity_sms.xml
+++ b/app/src/main/res/layout/activity_sms.xml
@@ -6,58 +6,17 @@
     android:layout_height="match_parent"
     tools:context="com.example.kevin.ecparking.SMSActivity">
 
-    <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.MapFragment"
-        android:layout_width="0dp"
-        android:layout_height="344dp"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="1dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="36dp"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="1dp"
-        android:layout_marginRight="1dp" />
-
-    <TextView
-        android:id="@+id/prompt1"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginLeft="1dp"
-        android:layout_marginRight="1dp"
-        android:layout_marginStart="1dp"
-        android:gravity="center"
-        android:text="Select the location"
-        android:textColor="@android:color/black"
-        app:layout_constraintBottom_toTopOf="@+id/map"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
-
     <TextView
         android:id="@+id/prompt2"
-        android:layout_width="108dp"
-        android:layout_height="0dp"
-        android:layout_marginLeft="1dp"
-        android:layout_marginStart="1dp"
+        android:layout_width="107dp"
+        android:layout_height="27dp"
         android:gravity="center"
         android:text="Parkable?"
         android:textColor="@android:color/black"
-        app:layout_constraintBottom_toBottomOf="@+id/spinner"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/spinner"
-        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBaseline_toBaselineOf="@+id/spinner"
+        tools:layout_constraintBaseline_creator="1"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Spinner
         android:id="@+id/spinner"
@@ -65,24 +24,35 @@
         android:layout_height="27dp"
         android:layout_marginLeft="107dp"
         android:layout_marginStart="107dp"
-        android:layout_marginTop="20dp"
         android:entries="@array/choices"
         android:gravity="center"
         app:layout_constraintLeft_toLeftOf="@+id/prompt2"
-        app:layout_constraintTop_toBottomOf="@+id/map"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/submit"
+        android:layout_marginBottom="404dp" />
 
     <Button
         android:id="@+id/submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginLeft="38dp"
-        android:layout_marginStart="38dp"
+        android:layout_marginStart="60dp"
         android:text="Submit"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="@+id/spinner"
         tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="60dp" />
+
+    <Button
+        android:id="@+id/cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cancel"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintLeft_toRightOf="@+id/spinner" />
 </android.support.constraint.ConstraintLayout>
