--- a/app/src/main/res/layout/popup_layout.xml
+++ b/app/src/main/res/layout/popup_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/popup"
     android:layout_width="wrap_content"
@@ -9,25 +9,42 @@
     tools:background="@android:color/white">
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/parkable_prompt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Popup"
+        android:text="Parkable:"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/parkable"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="This is a simple popup" />
+        android:layout_alignBottom="@+id/parkable_prompt"
+        android:layout_alignEnd="@+id/update"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/update"
+        android:layout_toRightOf="@+id/parkable_prompt"
+        android:gravity="center"
+        android:text="Yes"
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
 
     <Button
-        android:id="@+id/close"
+        android:id="@+id/cancel"
+        android:layout_below="@+id/parkable"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="left|center_horizontal"
         android:layout_marginTop="10dp"
         android:text="Close" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/update"
+        android:layout_below="@+id/parkable"
+        android:layout_toRightOf="@+id/cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Update" />
+
+</RelativeLayout>
